--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
-        "optimize-autoloader": true,
+        "optimize-autoloader": true
          
     }
 }
